# stubllm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/advanced/: test_advanced.py  test_sequences.py
examples/advanced/fixtures/: errors.yaml  sequences.yaml  streaming.yaml  tools.yaml
examples/basic/: test_example.py
examples/basic/fixtures/: chat.yaml
src/stubllm/: __init__.py  cli.py  server.py
src/stubllm/fixtures/: __init__.py  loader.py  matcher.py  models.py
src/stubllm/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/stubllm/pytest_plugin/: __init__.py  _helpers.py  plugin.py
src/stubllm/recorder/: __init__.py  proxy.py
src/stubllm/streaming/: __init__.py  sse.py
tests/: test_cli.py  test_fixtures.py  test_matching.py  test_pytest_plugin.py  test_recorder.py  test_sequences.py  test_server.py  test_server_live.py  test_streaming.py
tests/test_providers/: test_anthropic.py  test_gemini.py  test_openai.py
